// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Message theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div>
    <article
      class="rh-message"
      data-message-id="M0041"
      data-role="user"
      data-status="complete"
    >
      <header
        class="rh-message__header"
      >
        <span
          class="rh-message__role"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user rh-icon"
            data-icon="user"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
          <span
            class="rh-message__role-label"
          >
            You
          </span>
        </span>
        <span
          class="rh-message__meta"
        >
          <span
            class="rh-message__id"
          >
            M0041
          </span>
          <time
            class="rh-message__time"
            datetime="2026-09-03T14:20:11Z"
          >
            2026-09-03 14:20
          </time>
        </span>
      </header>
      <div
        class="rh-message-content"
        data-status="complete"
      >
        <div
          class="rh-message-content__text"
        >
          <p>
            Does the stiffness sweep in this preprint support C0041, or only the weaker wording?
          </p>
        </div>
        <div
          class="rh-message-content__reference"
        >
          <span
            class="rh-entity-ref rh-entity-ref--md"
            data-authority="qualified"
            data-kind="claim"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale rh-icon rh-entity-ref__kind"
              data-icon="scale"
              fill="none"
              focusable="false"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              C0041
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Stiffer gels shorten neurites
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
              data-authority="qualified"
              data-status="qualified"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Qualified
              </span>
            </span>
          </span>
        </div>
        <div
          class="rh-message-content__attachment"
        >
          <div
            class="rh-pdf-attachment"
          >
            <div
              class="rh-attachment-card"
              data-state="ready"
            >
              <span
                class="rh-attachment-card__icon"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-file-text rh-icon"
                  data-icon="file-text"
                  fill="none"
                  focusable="false"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                  />
                  <path
                    d="M14 2v5a1 1 0 0 0 1 1h5"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
              </span>
              <div
                class="rh-attachment-card__body"
              >
                <button
                  aria-label="Preview lee-2024-hydrogel-preprint.pdf"
                  class="rh-attachment-card__open"
                  type="button"
                >
                  <span
                    class="rh-attachment-card__name"
                    title="lee-2024-hydrogel-preprint.pdf"
                  >
                    lee-2024-hydrogel-preprint.pdf
                  </span>
                </button>
                <span
                  class="rh-attachment-card__meta"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--tone-neutral rh-attachment__state"
                    data-state="ready"
                    data-tone="neutral"
                    title="Copied into the session and ready to send."
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-check rh-icon"
                      data-icon="circle-check"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="m16 9-5.5 5.5L8 12"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Ready
                    </span>
                  </span>
                  <span
                    class="rh-attachment__facts"
                  >
                    <span
                      class="rh-attachment__type"
                    >
                      application/pdf
                    </span>
                    <span
                      class="rh-attachment__size"
                    >
                      3.4 MB
                    </span>
                    <span
                      class="rh-attachment__pages"
                    >
                      14
                       
                      pages
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rh-message__actions"
      />
    </article>
    <article
      class="rh-message"
      data-message-id="M0042"
      data-role="assistant"
      data-status="complete"
    >
      <header
        class="rh-message__header"
      >
        <span
          class="rh-message__role"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bot rh-icon"
            data-icon="bot"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8V4H8"
            />
            <rect
              height="12"
              rx="2"
              width="16"
              x="4"
              y="8"
            />
            <path
              d="M2 14h2"
            />
            <path
              d="M20 14h2"
            />
            <path
              d="M15 13v2"
            />
            <path
              d="M9 13v2"
            />
          </svg>
          <span
            class="rh-message__role-label"
          >
            Assistant
          </span>
        </span>
        <span
          class="rh-message__meta"
        >
          <span
            class="rh-message__id"
          >
            M0042
          </span>
          <time
            class="rh-message__time"
            datetime="2026-09-03T14:20:38Z"
          >
            2026-09-03 14:20
          </time>
          <span
            class="rh-message__provider"
          >
            Anthropic
          </span>
          <span
            class="rh-message__model"
          >
            claude-opus-5
          </span>
          <span
            class="rh-message__attempt"
          >
            attempt 
            2
             of 2
          </span>
        </span>
      </header>
      <div
        class="rh-message-content"
        data-status="complete"
      >
        <div
          class="rh-message-content__text"
        >
          <p>
            The sweep supports an association, not the causal wording. E0482 measures modulus, not neurite length.
          </p>
        </div>
        <div
          class="rh-message-content__reference"
        >
          <a
            class="rh-entity-ref rh-entity-ref--md rh-entity-ref--interactive"
            data-authority="accepted"
            data-kind="evidence"
            data-resolution="resolved"
            href="rh://evidence/E0482"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-quote rh-icon rh-entity-ref__kind"
              data-icon="quote"
              fill="none"
              focusable="false"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
              <path
                d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              E0482
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Storage modulus at 24 h
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge rh-entity-ref__authority"
              data-authority="accepted"
              data-status="accepted"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-check rh-icon"
                data-icon="circle-check"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m16 9-5.5 5.5L8 12"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Accepted
              </span>
            </span>
          </a>
        </div>
      </div>
      <div
        class="rh-message__actions"
      >
        <button
          aria-label="Copy message"
          class="rh-icon-button rh-icon-button--sm rh-button--ghost"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy rh-icon"
            data-icon="copy"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
        </button>
        <button
          aria-label="Context used (CP0007)"
          class="rh-icon-button rh-icon-button--sm rh-button--ghost"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-list rh-icon"
            data-icon="list"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 5h.01"
            />
            <path
              d="M3 12h.01"
            />
            <path
              d="M3 19h.01"
            />
            <path
              d="M8 5h13"
            />
            <path
              d="M8 12h13"
            />
            <path
              d="M8 19h13"
            />
          </svg>
        </button>
      </div>
    </article>
  </div>
</div>
`;

exports[`Message theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div>
    <article
      class="rh-message"
      data-message-id="M0041"
      data-role="user"
      data-status="complete"
    >
      <header
        class="rh-message__header"
      >
        <span
          class="rh-message__role"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user rh-icon"
            data-icon="user"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
          <span
            class="rh-message__role-label"
          >
            You
          </span>
        </span>
        <span
          class="rh-message__meta"
        >
          <span
            class="rh-message__id"
          >
            M0041
          </span>
          <time
            class="rh-message__time"
            datetime="2026-09-03T14:20:11Z"
          >
            2026-09-03 14:20
          </time>
        </span>
      </header>
      <div
        class="rh-message-content"
        data-status="complete"
      >
        <div
          class="rh-message-content__text"
        >
          <p>
            Does the stiffness sweep in this preprint support C0041, or only the weaker wording?
          </p>
        </div>
        <div
          class="rh-message-content__reference"
        >
          <span
            class="rh-entity-ref rh-entity-ref--md"
            data-authority="qualified"
            data-kind="claim"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale rh-icon rh-entity-ref__kind"
              data-icon="scale"
              fill="none"
              focusable="false"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              C0041
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Stiffer gels shorten neurites
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
              data-authority="qualified"
              data-status="qualified"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Qualified
              </span>
            </span>
          </span>
        </div>
        <div
          class="rh-message-content__attachment"
        >
          <div
            class="rh-pdf-attachment"
          >
            <div
              class="rh-attachment-card"
              data-state="ready"
            >
              <span
                class="rh-attachment-card__icon"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-file-text rh-icon"
                  data-icon="file-text"
                  fill="none"
                  focusable="false"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                  />
                  <path
                    d="M14 2v5a1 1 0 0 0 1 1h5"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
              </span>
              <div
                class="rh-attachment-card__body"
              >
                <button
                  aria-label="Preview lee-2024-hydrogel-preprint.pdf"
                  class="rh-attachment-card__open"
                  type="button"
                >
                  <span
                    class="rh-attachment-card__name"
                    title="lee-2024-hydrogel-preprint.pdf"
                  >
                    lee-2024-hydrogel-preprint.pdf
                  </span>
                </button>
                <span
                  class="rh-attachment-card__meta"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--tone-neutral rh-attachment__state"
                    data-state="ready"
                    data-tone="neutral"
                    title="Copied into the session and ready to send."
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-check rh-icon"
                      data-icon="circle-check"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="m16 9-5.5 5.5L8 12"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Ready
                    </span>
                  </span>
                  <span
                    class="rh-attachment__facts"
                  >
                    <span
                      class="rh-attachment__type"
                    >
                      application/pdf
                    </span>
                    <span
                      class="rh-attachment__size"
                    >
                      3.4 MB
                    </span>
                    <span
                      class="rh-attachment__pages"
                    >
                      14
                       
                      pages
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rh-message__actions"
      />
    </article>
    <article
      class="rh-message"
      data-message-id="M0042"
      data-role="assistant"
      data-status="complete"
    >
      <header
        class="rh-message__header"
      >
        <span
          class="rh-message__role"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bot rh-icon"
            data-icon="bot"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8V4H8"
            />
            <rect
              height="12"
              rx="2"
              width="16"
              x="4"
              y="8"
            />
            <path
              d="M2 14h2"
            />
            <path
              d="M20 14h2"
            />
            <path
              d="M15 13v2"
            />
            <path
              d="M9 13v2"
            />
          </svg>
          <span
            class="rh-message__role-label"
          >
            Assistant
          </span>
        </span>
        <span
          class="rh-message__meta"
        >
          <span
            class="rh-message__id"
          >
            M0042
          </span>
          <time
            class="rh-message__time"
            datetime="2026-09-03T14:20:38Z"
          >
            2026-09-03 14:20
          </time>
          <span
            class="rh-message__provider"
          >
            Anthropic
          </span>
          <span
            class="rh-message__model"
          >
            claude-opus-5
          </span>
          <span
            class="rh-message__attempt"
          >
            attempt 
            2
             of 2
          </span>
        </span>
      </header>
      <div
        class="rh-message-content"
        data-status="complete"
      >
        <div
          class="rh-message-content__text"
        >
          <p>
            The sweep supports an association, not the causal wording. E0482 measures modulus, not neurite length.
          </p>
        </div>
        <div
          class="rh-message-content__reference"
        >
          <a
            class="rh-entity-ref rh-entity-ref--md rh-entity-ref--interactive"
            data-authority="accepted"
            data-kind="evidence"
            data-resolution="resolved"
            href="rh://evidence/E0482"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-quote rh-icon rh-entity-ref__kind"
              data-icon="quote"
              fill="none"
              focusable="false"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
              <path
                d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              E0482
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Storage modulus at 24 h
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge rh-entity-ref__authority"
              data-authority="accepted"
              data-status="accepted"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-check rh-icon"
                data-icon="circle-check"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m16 9-5.5 5.5L8 12"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Accepted
              </span>
            </span>
          </a>
        </div>
      </div>
      <div
        class="rh-message__actions"
      >
        <button
          aria-label="Copy message"
          class="rh-icon-button rh-icon-button--sm rh-button--ghost"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy rh-icon"
            data-icon="copy"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
        </button>
        <button
          aria-label="Context used (CP0007)"
          class="rh-icon-button rh-icon-button--sm rh-button--ghost"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-list rh-icon"
            data-icon="list"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 5h.01"
            />
            <path
              d="M3 12h.01"
            />
            <path
              d="M3 19h.01"
            />
            <path
              d="M8 5h13"
            />
            <path
              d="M8 12h13"
            />
            <path
              d="M8 19h13"
            />
          </svg>
        </button>
      </div>
    </article>
  </div>
</div>
`;

exports[`Message theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div>
    <article
      class="rh-message"
      data-message-id="M0041"
      data-role="user"
      data-status="complete"
    >
      <header
        class="rh-message__header"
      >
        <span
          class="rh-message__role"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user rh-icon"
            data-icon="user"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
          <span
            class="rh-message__role-label"
          >
            You
          </span>
        </span>
        <span
          class="rh-message__meta"
        >
          <span
            class="rh-message__id"
          >
            M0041
          </span>
          <time
            class="rh-message__time"
            datetime="2026-09-03T14:20:11Z"
          >
            2026-09-03 14:20
          </time>
        </span>
      </header>
      <div
        class="rh-message-content"
        data-status="complete"
      >
        <div
          class="rh-message-content__text"
        >
          <p>
            Does the stiffness sweep in this preprint support C0041, or only the weaker wording?
          </p>
        </div>
        <div
          class="rh-message-content__reference"
        >
          <span
            class="rh-entity-ref rh-entity-ref--md"
            data-authority="qualified"
            data-kind="claim"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale rh-icon rh-entity-ref__kind"
              data-icon="scale"
              fill="none"
              focusable="false"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              C0041
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Stiffer gels shorten neurites
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
              data-authority="qualified"
              data-status="qualified"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Qualified
              </span>
            </span>
          </span>
        </div>
        <div
          class="rh-message-content__attachment"
        >
          <div
            class="rh-pdf-attachment"
          >
            <div
              class="rh-attachment-card"
              data-state="ready"
            >
              <span
                class="rh-attachment-card__icon"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-file-text rh-icon"
                  data-icon="file-text"
                  fill="none"
                  focusable="false"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                  />
                  <path
                    d="M14 2v5a1 1 0 0 0 1 1h5"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
              </span>
              <div
                class="rh-attachment-card__body"
              >
                <button
                  aria-label="Preview lee-2024-hydrogel-preprint.pdf"
                  class="rh-attachment-card__open"
                  type="button"
                >
                  <span
                    class="rh-attachment-card__name"
                    title="lee-2024-hydrogel-preprint.pdf"
                  >
                    lee-2024-hydrogel-preprint.pdf
                  </span>
                </button>
                <span
                  class="rh-attachment-card__meta"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--tone-neutral rh-attachment__state"
                    data-state="ready"
                    data-tone="neutral"
                    title="Copied into the session and ready to send."
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-check rh-icon"
                      data-icon="circle-check"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="m16 9-5.5 5.5L8 12"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Ready
                    </span>
                  </span>
                  <span
                    class="rh-attachment__facts"
                  >
                    <span
                      class="rh-attachment__type"
                    >
                      application/pdf
                    </span>
                    <span
                      class="rh-attachment__size"
                    >
                      3.4 MB
                    </span>
                    <span
                      class="rh-attachment__pages"
                    >
                      14
                       
                      pages
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rh-message__actions"
      />
    </article>
    <article
      class="rh-message"
      data-message-id="M0042"
      data-role="assistant"
      data-status="complete"
    >
      <header
        class="rh-message__header"
      >
        <span
          class="rh-message__role"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bot rh-icon"
            data-icon="bot"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8V4H8"
            />
            <rect
              height="12"
              rx="2"
              width="16"
              x="4"
              y="8"
            />
            <path
              d="M2 14h2"
            />
            <path
              d="M20 14h2"
            />
            <path
              d="M15 13v2"
            />
            <path
              d="M9 13v2"
            />
          </svg>
          <span
            class="rh-message__role-label"
          >
            Assistant
          </span>
        </span>
        <span
          class="rh-message__meta"
        >
          <span
            class="rh-message__id"
          >
            M0042
          </span>
          <time
            class="rh-message__time"
            datetime="2026-09-03T14:20:38Z"
          >
            2026-09-03 14:20
          </time>
          <span
            class="rh-message__provider"
          >
            Anthropic
          </span>
          <span
            class="rh-message__model"
          >
            claude-opus-5
          </span>
          <span
            class="rh-message__attempt"
          >
            attempt 
            2
             of 2
          </span>
        </span>
      </header>
      <div
        class="rh-message-content"
        data-status="complete"
      >
        <div
          class="rh-message-content__text"
        >
          <p>
            The sweep supports an association, not the causal wording. E0482 measures modulus, not neurite length.
          </p>
        </div>
        <div
          class="rh-message-content__reference"
        >
          <a
            class="rh-entity-ref rh-entity-ref--md rh-entity-ref--interactive"
            data-authority="accepted"
            data-kind="evidence"
            data-resolution="resolved"
            href="rh://evidence/E0482"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-quote rh-icon rh-entity-ref__kind"
              data-icon="quote"
              fill="none"
              focusable="false"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
              <path
                d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              E0482
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Storage modulus at 24 h
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge rh-entity-ref__authority"
              data-authority="accepted"
              data-status="accepted"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-check rh-icon"
                data-icon="circle-check"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m16 9-5.5 5.5L8 12"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Accepted
              </span>
            </span>
          </a>
        </div>
      </div>
      <div
        class="rh-message__actions"
      >
        <button
          aria-label="Copy message"
          class="rh-icon-button rh-icon-button--sm rh-button--ghost"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy rh-icon"
            data-icon="copy"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
        </button>
        <button
          aria-label="Context used (CP0007)"
          class="rh-icon-button rh-icon-button--sm rh-button--ghost"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-list rh-icon"
            data-icon="list"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 5h.01"
            />
            <path
              d="M3 12h.01"
            />
            <path
              d="M3 19h.01"
            />
            <path
              d="M8 5h13"
            />
            <path
              d="M8 12h13"
            />
            <path
              d="M8 19h13"
            />
          </svg>
        </button>
      </div>
    </article>
  </div>
</div>
`;

exports[`Message theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div>
    <article
      class="rh-message"
      data-message-id="M0041"
      data-role="user"
      data-status="complete"
    >
      <header
        class="rh-message__header"
      >
        <span
          class="rh-message__role"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user rh-icon"
            data-icon="user"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
          <span
            class="rh-message__role-label"
          >
            You
          </span>
        </span>
        <span
          class="rh-message__meta"
        >
          <span
            class="rh-message__id"
          >
            M0041
          </span>
          <time
            class="rh-message__time"
            datetime="2026-09-03T14:20:11Z"
          >
            2026-09-03 14:20
          </time>
        </span>
      </header>
      <div
        class="rh-message-content"
        data-status="complete"
      >
        <div
          class="rh-message-content__text"
        >
          <p>
            Does the stiffness sweep in this preprint support C0041, or only the weaker wording?
          </p>
        </div>
        <div
          class="rh-message-content__reference"
        >
          <span
            class="rh-entity-ref rh-entity-ref--md"
            data-authority="qualified"
            data-kind="claim"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale rh-icon rh-entity-ref__kind"
              data-icon="scale"
              fill="none"
              focusable="false"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              C0041
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Stiffer gels shorten neurites
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
              data-authority="qualified"
              data-status="qualified"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Qualified
              </span>
            </span>
          </span>
        </div>
        <div
          class="rh-message-content__attachment"
        >
          <div
            class="rh-pdf-attachment"
          >
            <div
              class="rh-attachment-card"
              data-state="ready"
            >
              <span
                class="rh-attachment-card__icon"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-file-text rh-icon"
                  data-icon="file-text"
                  fill="none"
                  focusable="false"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                  />
                  <path
                    d="M14 2v5a1 1 0 0 0 1 1h5"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
              </span>
              <div
                class="rh-attachment-card__body"
              >
                <button
                  aria-label="Preview lee-2024-hydrogel-preprint.pdf"
                  class="rh-attachment-card__open"
                  type="button"
                >
                  <span
                    class="rh-attachment-card__name"
                    title="lee-2024-hydrogel-preprint.pdf"
                  >
                    lee-2024-hydrogel-preprint.pdf
                  </span>
                </button>
                <span
                  class="rh-attachment-card__meta"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--tone-neutral rh-attachment__state"
                    data-state="ready"
                    data-tone="neutral"
                    title="Copied into the session and ready to send."
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-check rh-icon"
                      data-icon="circle-check"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <path
                        d="m16 9-5.5 5.5L8 12"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Ready
                    </span>
                  </span>
                  <span
                    class="rh-attachment__facts"
                  >
                    <span
                      class="rh-attachment__type"
                    >
                      application/pdf
                    </span>
                    <span
                      class="rh-attachment__size"
                    >
                      3.4 MB
                    </span>
                    <span
                      class="rh-attachment__pages"
                    >
                      14
                       
                      pages
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rh-message__actions"
      />
    </article>
    <article
      class="rh-message"
      data-message-id="M0042"
      data-role="assistant"
      data-status="complete"
    >
      <header
        class="rh-message__header"
      >
        <span
          class="rh-message__role"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-bot rh-icon"
            data-icon="bot"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8V4H8"
            />
            <rect
              height="12"
              rx="2"
              width="16"
              x="4"
              y="8"
            />
            <path
              d="M2 14h2"
            />
            <path
              d="M20 14h2"
            />
            <path
              d="M15 13v2"
            />
            <path
              d="M9 13v2"
            />
          </svg>
          <span
            class="rh-message__role-label"
          >
            Assistant
          </span>
        </span>
        <span
          class="rh-message__meta"
        >
          <span
            class="rh-message__id"
          >
            M0042
          </span>
          <time
            class="rh-message__time"
            datetime="2026-09-03T14:20:38Z"
          >
            2026-09-03 14:20
          </time>
          <span
            class="rh-message__provider"
          >
            Anthropic
          </span>
          <span
            class="rh-message__model"
          >
            claude-opus-5
          </span>
          <span
            class="rh-message__attempt"
          >
            attempt 
            2
             of 2
          </span>
        </span>
      </header>
      <div
        class="rh-message-content"
        data-status="complete"
      >
        <div
          class="rh-message-content__text"
        >
          <p>
            The sweep supports an association, not the causal wording. E0482 measures modulus, not neurite length.
          </p>
        </div>
        <div
          class="rh-message-content__reference"
        >
          <a
            class="rh-entity-ref rh-entity-ref--md rh-entity-ref--interactive"
            data-authority="accepted"
            data-kind="evidence"
            data-resolution="resolved"
            href="rh://evidence/E0482"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-quote rh-icon rh-entity-ref__kind"
              data-icon="quote"
              fill="none"
              focusable="false"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
              <path
                d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              E0482
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Storage modulus at 24 h
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-accepted rh-authority-badge rh-entity-ref__authority"
              data-authority="accepted"
              data-status="accepted"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-check rh-icon"
                data-icon="circle-check"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m16 9-5.5 5.5L8 12"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Accepted
              </span>
            </span>
          </a>
        </div>
      </div>
      <div
        class="rh-message__actions"
      >
        <button
          aria-label="Copy message"
          class="rh-icon-button rh-icon-button--sm rh-button--ghost"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy rh-icon"
            data-icon="copy"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
        </button>
        <button
          aria-label="Context used (CP0007)"
          class="rh-icon-button rh-icon-button--sm rh-button--ghost"
          data-variant="ghost"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-list rh-icon"
            data-icon="list"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 5h.01"
            />
            <path
              d="M3 12h.01"
            />
            <path
              d="M3 19h.01"
            />
            <path
              d="M8 5h13"
            />
            <path
              d="M8 12h13"
            />
            <path
              d="M8 19h13"
            />
          </svg>
        </button>
      </div>
    </article>
  </div>
</div>
`;
